Add compiler-related jvmArgs in build.gradle
Signed-off-by: Shuang Li <shualee@amazon.com>