@@ -123,7 +123,7 @@ tasks.named("check").configure { dependsOn("integTest") }
 tasks.named("publishNebulaPublicationToMavenLocal").configure { dependsOn "generatePomFileForPluginZipPublication" }
 
 integTest {
-dependsOn 'copyDependencies'
+dependsOn 'copyDependencies', 'downloadGraalCompiler'
 // The --debug-jvm command-line option makes the cluster debuggable; this makes the tests debuggable
 if (System.getProperty("test.debug") != null) {
 	jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005'
@@ -135,7 +135,7 @@ testDistribution = "INTEG_TEST"
 
 // This installs our plugin into the testClusters
 plugin(project.tasks.bundlePlugin.archiveFile)
-jvmArgs "--module-path=${pythonLauncherLibDir.get().asFile} --add-modules=${appendModuleNames} -Dtruffle.class.path.append=${pythonLauncherLibDir.get().asFile}"
+jvmArgs "--module-path=${pythonLauncherLibDir.get().asFile}", "--add-modules=${appendModuleNames}", "-XX:+UnlockExperimentalVMOptions", "-XX:+EnableJVMCI", "--upgrade-module-path=${layout.buildDirectory.file("compiler.jar").get().asFile}", "--enable-native-access=org.graalvm.truffle,ALL-UNNAMED"
 }
 
 run {
@@ -217,11 +217,11 @@ tasks.register('downloadGraalCompiler') {
 assemble.dependsOn downloadGraalCompiler
 
 tasks.named('yamlRestTest', RestIntegTestTask) {
-	dependsOn 'copyDependencies'
+	dependsOn 'copyDependencies', 'downloadGraalCompiler'
 }
 
 testClusters.yamlRestTest {
-	jvmArgs "--module-path=${pythonLauncherLibDir.get().asFile} --add-modules=${appendModuleNames} -Dtruffle.class.path.append=${pythonLauncherLibDir.get().asFile}"
+	jvmArgs "--module-path=${pythonLauncherLibDir.get().asFile}", "--add-modules=${appendModuleNames}", "-XX:+UnlockExperimentalVMOptions", "-XX:+EnableJVMCI", "--upgrade-module-path=${layout.buildDirectory.file("compiler.jar").get().asFile}", "--enable-native-access=org.graalvm.truffle,ALL-UNNAMED"
 }
 
 // Skip filepermissions check since the generated python binaries will be executable
